feat: Dark mode toggle

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,12 @@
+<div class="p-3 flex justify-content-end">
+  <p-togglebutton 
+    (onChange)="onToggleChange($event)"
+    onLabel="Dark" 
+    offLabel="Light" 
+    onIcon="pi pi-moon" 
+    offIcon="pi pi-sun" 
+    class="w-20" 
+    ariaLabel="Toggle dark mode" />
+</div>
+
 <router-outlet />
