--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 @import "primeflex/themes/primeone-light.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
+
+:root { font-size: 24px; }
+body { font-family: Arial, sans-serif; }
