--- a/src/app/features/positions/positions.component.html
+++ b/src/app/features/positions/positions.component.html
@@ -1,19 +1,69 @@
-<p-table [value]="positionsArray()" [tableStyle]="{ 'min-width': '50rem' }">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Account</th>
-      <th>Security</th>
-      <th>Position</th>
-      <th>Last Updated</th>
-    </tr>
-  </ng-template>
-  
-  <ng-template pTemplate="body" let-position>
-    <tr>
-      <td>{{ position.account }}</td>
-      <td>{{ position.securityId }}</td>
-      <td>{{ position.totalShares | number }}</td>
-      <td>{{ position.lastUpdated | date:'HH:mm:ss' }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<div class="pt-2 pb-6 px-6">
+  <p-table 
+    #dt
+    [value]="positionsArray()" 
+    [tableStyle]="{ 'min-width': '50rem' }"
+    [globalFilterFields]="['account', 'securityId']"
+  >
+    <ng-template pTemplate="caption">
+      <div class="flex">
+        <h2 class="text-2xl font-bold m-0">Trading Positions</h2>
+        <p-iconfield iconPosition="left" class="ml-auto">
+          <p-inputicon>
+            <i class="pi pi-search"></i>
+          </p-inputicon>
+          <input 
+            pInputText 
+            type="text" 
+            (input)="dt.filterGlobal($event.target.value, 'contains')" 
+            placeholder="Search account or security" 
+            class="w-80"
+          />
+        </p-iconfield>
+      </div>
+    </ng-template>
+    
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Account</th>
+        <th>Security</th>
+        <th pSortableColumn="totalShares" style="width:20%">
+          Position
+          <p-sortIcon field="totalShares" />
+        </th>
+        <th pSortableColumn="lastUpdated" style="width:20%">
+          Last Updated
+          <p-sortIcon field="lastUpdated" />
+        </th>
+      </tr>
+    </ng-template>
+    
+    <ng-template pTemplate="body" let-position>
+      <tr>
+        <td>{{ position.account }}</td>
+        <td>{{ position.securityId }}</td>
+        <td>
+          <span 
+            [class]="getPositionClass(position.totalShares)"
+            class="px-3 py-1 text-sm font-bold"
+            style="border-radius: 8px;"
+          >
+            <i [class]="getPositionIcon(position.totalShares)" class="mr-1"></i>
+            {{ position.totalShares | number }}
+          </span>
+        </td>
+        <td>{{ position.lastUpdated | date:'HH:mm:ss' }}</td>
+      </tr>
+    </ng-template>
+    
+    <ng-template #emptymessage>
+      <tr>
+        <td colspan="4" class="text-center py-8">
+          <i class="pi pi-chart-line text-4xl mb-3"></i>
+          <h3 class="text-lg font-semibold mb-2">No positions available</h3>
+          <p class="text-sm">Positions will appear here when trades are executed.</p>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
